--- a/shero/src/main/webapp/css/main.css
+++ b/shero/src/main/webapp/css/main.css
@@ -140,15 +140,6 @@ body {
     border-radius: 4px;
 }
 
-.item-list {
-    display: block;
-    padding: 4px;
-    margin-bottom: 20px;
-    line-height: 1.42857143;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    -webkit-transition: border .2s ease-in-out;
-    -o-transition: border .2s ease-in-out;
-    transition: border .2s ease-in-out;
+.well.list {
+    background-color: #CCFFE5;
 }
