--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -8,7 +8,7 @@
 
 <div class="container">    
 	<div class="row">
-        <div class="btn-group" role="group" aria-label="...">
+        <div class="btn-group-sm" role="group" aria-label="...">
             <button type="button" class="btn btn-success " ng-click="sort('price')">Price
                  <span class="glyphicon sort-icon" ng-show="sortKey=='price'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
             </button>
