finished draft of search-result list

--- a/shero/src/main/webapp/css/searchresults.css
+++ b/shero/src/main/webapp/css/searchresults.css
@@ -1,3 +1,7 @@
+.searchresult-heading {
+    background-color: lightgray;
+}
+
 .searchresult-title {
     margin-top: 0.1em;
     margin-bottom: 0.2em;
