added image to search-results (NOT TESTED YET!)

--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -23,7 +23,7 @@
         <div class="col-md-12 row well-sm searchresult-heading">
             <div class="col-md-2">
                 <img class="img-thumbnail"  
-                     src="img/yeoman.png" 
+                     src="/rest/items/image/{{item.id}}" 
                      alt="Couldn't find image-picture">
                 </image>
             </div>
