--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -1,31 +1,34 @@
 <div class="col-md-12">
-    <div class="btn-group-sm pull-right" role="group">
-        Sort by
-        <button type="button" 
-            class="btn btn-primary " 
-            ng-click="sort('price')">... price
-            <span class="glyphicon sort-icon" 
-                  ng-show="sortKey=='price'" 
-                  ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}">
-            </span>
-        </button>
-        <button type="button" 
-            class="btn btn-primary" 
-            ng-click="sort('name')">... name
-            <span class="glyphicon sort-icon" 
-                  ng-show="sortKey=='name'" 
-                  ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}">
-            </span>
-        </button>
-        <button type="button" 
-            class="btn btn-primary" 
-            ng-click="sort('created')">... novelty
-            <span class="glyphicon sort-icon" 
-                  ng-show="sortKey=='created'" 
-                  ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}">
-            </span>
-        </button>
+    <div class="col-md-12">
+        <div class="btn-group-sm pull-right" role="group">
+            Sort by
+            <button type="button" 
+                class="btn btn-primary " 
+                ng-click="sort('price')">... price
+                <span class="glyphicon sort-icon" 
+                      ng-show="sortKey=='price'" 
+                      ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}">
+                </span>
+            </button>
+            <button type="button" 
+                class="btn btn-primary" 
+                ng-click="sort('name')">... name
+                <span class="glyphicon sort-icon" 
+                      ng-show="sortKey=='name'" 
+                      ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}">
+                </span>
+            </button>
+            <button type="button" 
+                class="btn btn-primary" 
+                ng-click="sort('created')">... novelty
+                <span class="glyphicon sort-icon" 
+                      ng-show="sortKey=='created'" 
+                      ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}">
+                </span>
+            </button>
+        </div> 
     </div>
+    <br>
     <div class="col-md-12" dir-paginate="item in itemlist | orderBy:sortKey:reverse | itemsPerPage:10">     
         <div class="col-md-12 row well-sm searchresult-heading">
             <div class="col-md-2">
@@ -40,7 +43,7 @@
                 </h4>
             </div>
             <div class="col-md-3">
-                <uib-rating class="pull-right" ng-model="item.rating" 
+                <uib-rating class="pull-right" ng-model="item.meanRating" 
                     max="5" 
                     readonly="true"  
                     aria-labelledby="default-rating"
@@ -77,11 +80,13 @@
                 </div>
             </div>
         </div>
+        <br>
     </div>
     <dir-pagination-controls
         max-size="5"
         direction-links="true"
         boundary-links="true" >
     </dir-pagination-controls>
+{{itemlist}}
 </div>
 
