--- a/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
+++ b/shero/src/main/webapp/app/views/AddItem/partials/Pictures.html
@@ -14,63 +14,56 @@
 
 </style>
 
-<div class="text-center" >
+<div class="text-center"
+     ng-app="app" 
+     flow-init
+     flow-file-added="validate($file)"
+     flow-file-added="!!{png:1,jpg:1,jpeg:1}[$file.getExtension()]"
+     flow-files-submitted="imageUpload( $files, $event, $flow )"
+     flow-complete="redirect()">
+    <h2>Upload an Image</h2>
+    <div>
+      <div>
+        <!-- Placeholder for images -->
+        <div class="thumbnail_shero" ng-hide="$flow.files.length">
+          <img src="../../../../img/placeholder_small.jpeg" />
+        </div>
+        <div class="thumbnail_shero" ng-show="$flow.files.length">
+          <img flow-img="$flow.files[0]" />
+        </div>
 
-	<h2>Upload an Image</h2>
-	<div ng-app="app" 
-		 flow-init
-	     flow-file-added="validate($file)"
-	     flow-file-added="!!{png:1,jpg:1,jpeg:1}[$file.getExtension()]"
-	     flow-files-submitted="imageUpload( $files, $event, $flow )"
-	     flow-complete="redirect()">
-	      
-		<div class="container">
-		  
-		  <div>
-		    <!-- Placeholder for images -->
-		    <div class="thumbnail_shero" ng-hide="$flow.files.length">
-	          <img src="../../../../img/placeholder_small.jpeg" />
-		    </div>
-		    <div class="thumbnail_shero" ng-show="$flow.files.length">
-		      <img flow-img="$flow.files[0]" />
-		    </div>
-		    
-	    	<p>
-			    <!-- <span class="label label-info">Size: {{$flow.getSize()}}</span>  -->
-			    <span class="label label-info">Size: {{$flow.getSize() / 1024 | number:0}} KB</span>
-			    <!-- <span class="label label-info">Is Uploading: {{$flow.isUploading()}}</span> -->
-		  	</p>
-		  	<div ng-repeat="error in errors">
-				{{error.error}} - {{error.file.name}}
-			</div>
-		  	
-		    <!-- Buttons for selection -->
-		    <div>
-		      <button type="button" class="btn btn-default" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Select image</button>
-		      <button type="button" class="btn" 			  ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Change</button>
-		      <button type="button" class="btn btn-danger"  ng-show="$flow.files.length" ng-click="$flow.cancel()">Remove</button>
-		    </div>
-		    <p>
-		      Only PNG,GIF,JPG files smaller than 2MB.
-		    </p>
-		  </div>
-	  
-	  	  <!-- Progressbar -->
-		  <div>
-		    <!-- ngRepeat: file in $flow.files -->
-		    <div ng-repeat="file in $flow.files" class="transfer-box ng-scope ng-binding">
-		      <div class="progress progress-striped" ng-class="{active: file.isUploading()}">
-		        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ng-style="{width: (file.progress() * 100) + '%'}" style="width: 100%;">
-		          <span class="sr-only ng-binding">1% Complete</span>
-		        </div>
-		      </div>
-		    </div>
-		  </div>
-		  
-		</div>
-		
-		<!-- <button ng-click="triggerImage()"  class="btn btn-success">Upload Picture</button> -->
-		<button type="submit" ng-show="$flow.files.length" class="btn btn-success">Share Item</button>
-	</div>
+        <p>
+            <span class="label label-info">Size: {{$flow.getSize() / 1024 | number:0}} KB</span>
+        </p>
+        <div ng-repeat="error in errors">
+            {{error.error}} - {{error.file.name}}
+        </div>
+        <!-- Buttons for selection -->
+        <div>
+          <button type="button" class="btn btn-default" ng-hide="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Select image</button>
+          <button type="button" class="btn" 			  ng-show="$flow.files.length" flow-btn flow-attrs="{accept:'image/*'}">Change</button>
+          <button type="button" class="btn btn-danger"  ng-show="$flow.files.length" ng-click="$flow.cancel()">Remove</button>
+        </div>
+        <p>
+          Only PNG,GIF,JPG files smaller than 2MB.
+        </p>
+      </div>
+
+      <!-- Progressbar -->
+      <div>
+        <!-- ngRepeat: file in $flow.files -->
+        <div ng-repeat="file in $flow.files" class="transfer-box ng-scope ng-binding">
+          <div class="progress progress-striped" ng-class="{active: file.isUploading()}">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ng-style="{width: (file.progress() * 100) + '%'}" style="width: 100%;">
+              <span class="sr-only ng-binding">1% Complete</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- <button ng-click="triggerImage()"  class="btn btn-success">Upload Picture</button> -->
+    <button type="submit" ng-show="$flow.files.length" class="btn btn-success">Share Item</button>
 </div>
+
 
