little beauty styling for the result list

--- a/shero/src/main/webapp/css/searchresults.css
+++ b/shero/src/main/webapp/css/searchresults.css
@@ -1,8 +1,23 @@
 .searchresult-heading {
     background-color: lightgray;
+    padding: 15px;
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+}
+
+.searchresult-footer {
+    padding-bottom: 15px;
 }
 
 .searchresult-title {
     margin-top: 0.1em;
     margin-bottom: 0.2em;
+}
+
+.searchresult-container {
+	border: 3px solid lightgrey;
+	margin-bottom: 10px;
+	border-radius: 5px;
+	padding-left: 0px !important;
+	padding-right: 0px !important;
 }
