--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -28,9 +28,9 @@
             </button>
         </div> 
     </div>
-    <br>
-    <div class="col-md-12" dir-paginate="item in itemlist | orderBy:sortKey:reverse | itemsPerPage:10">     
-        <div class="col-md-12 row well-sm searchresult-heading">
+    <br/><br/>
+    <div class="col-md-12 searchresult-container" dir-paginate="item in itemlist | orderBy:sortKey:reverse | itemsPerPage:10">     
+        <div class="col-md-12 well-sm searchresult-heading">
             <div class="col-md-2">
                 <img class="img-thumbnail"  
                      src="/rest/items/image/{{item.id}}" 
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12 collapse" id="{{item.id}}">
+        <div class="col-md-12 collapse searchresult-footer" id="{{item.id}}">
             <br>
             <div class="col-md-4">
                 <uib-datepicker ng-model='activeDate' multi-select='item.availabilityDates' name="datepicker"></uib-datepicker>
