Autocomplete fields in searchbar for item & location

--- a/shero/src/main/webapp/css/searchresults.css
+++ b/shero/src/main/webapp/css/searchresults.css
@@ -1,5 +1,5 @@
 .searchresult-heading {
-    background-color: lightgray;
+    background-color: lightgrey;
     padding: 15px;
     border-bottom-left-radius: 0px !important;
     border-bottom-right-radius: 0px !important;
