Bugfixes on Searchbar and SearchResults

--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -33,7 +33,7 @@
             <div class="col-md-12 well-sm searchresult-heading">
                 <div class="col-md-2">
                     <img class="img-thumbnail"  
-                         src="/rest/items/image/{{item.id}}"
+                         src="{{item.imgUrl}}"
                          onerror="if (this.src != 'img/placeholder_small.jpeg') this.src = 'img/placeholder_small.jpeg';"
                          alt="Couldn't find image">
                     </image>
