getting data for EditItem-view into controller

--- a/shero/src/main/webapp/app/views/EditItem.html
+++ b/shero/src/main/webapp/app/views/EditItem.html
@@ -1,5 +1,13 @@
 <p>Edit Item with Id: {{itemId}}!</p>
 
 <p>
-    The item: {{item}}
+    The item (use to find necessary items: {{item}}<br>
+    <br>
+    name: {{item.name}}<br>
+    price: {{item.price}}<br>
+    desc: {{item.description}}<br>
+    <br>
+    for displaying availability in calendar use: {{item.availabilityDates}}<br>
+    for displaying tags use: {{item.taglist}}<br>
+    for displaying rating use {{item.meanRating}}
 </p>
