service to post rating, service to post rental, service to delete item, button to delete item

--- a/shero/src/main/webapp/app/views/EditItem.html
+++ b/shero/src/main/webapp/app/views/EditItem.html
@@ -11,3 +11,5 @@
     for displaying tags use: {{item.taglist}}<br>
     for displaying rating use {{item.meanRating}}
 </p>
+
+<button class="btn btn-sm btn-warning" ng-click="deleteItem();">Delete this item</button>
