created modal and controller for selection of days when click on rent item in searchresults.js

--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -60,7 +60,7 @@
                         <button type="button" id="toggle{{item.id}}" class="btn btn-primary" data-toggle="collapse" data-target="#{{item.id}}">
                             Details
                         </button>
-                        <button type="button" id="rent{{item.id}}" class="btn btn-success">
+                        <button type="button" id="rent{{item.id}}" class="btn btn-success" ng-click="openRentItemModal({{item}});">
                             Rent
                         </button>
                     </div>
