--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -1,5 +1,6 @@
 <div class="col-md-12">
     <div class="col-md-12">
+        <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
         <div class="btn-group-sm pull-right" role="group">
             Sort by
             <button type="button" 
@@ -60,7 +61,7 @@
                     <button type="button" id="toggle{{item.id}}" class="btn btn-primary" data-toggle="collapse" data-target="#{{item.id}}">
                         Details
                     </button>
-                    <button type="button" id="rent{{item.id}}" class="btn btn-success">
+                    <button  popover-trigger="mouseenter" popover-enable="!loggedIn" popover-placement="right" uib-popover="Please log in to rent an item"   type="button" id="rent{{item.id}}" class="btn btn-success" ng-click="addAlert()">
                         Rent
                     </button>
                     
