--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -36,7 +36,7 @@
                          src="{{item.imgUrl}}"
                          onerror="if (this.src != 'img/placeholder_small.jpeg') this.src = 'img/placeholder_small.jpeg';"
                          alt="Couldn't find image">
-                    </image>
+                    </img>
                 </div>
                 <div class="col-md-7 searchresult-title">
                     <h4> {{item.name}} 
