--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -30,7 +30,7 @@
     </div>
     <br/><br/>
     <div class="col-md-12 myrentals-container" dir-paginate="item in rentedItems | orderBy:sortKey:reverse | itemsPerPage:10"> 
-        <div class="col-md-12 row well-sm myrentals-heading">
+        <div class="col-md-12 well-sm myrentals-heading">
             <div class="col-md-2">
                 <img class="img-thumbnail"  
                      src="/rest/items/image/{{item.id}}"
