--- a/shero/src/main/webapp/app/views/ModalRentItem.html
+++ b/shero/src/main/webapp/app/views/ModalRentItem.html
@@ -12,18 +12,18 @@
       <uib-datepicker ng-model='activeDate' 
       				  multi-select='formData.selectedDates' 
       				  name='datepicker'
-      				  date-disabled='disabled(date, mode)'>
+      				  date-disabled='disabled(date, mode)'
+                      custom-class='getDayClass(date, mode)'>
       </uib-datepicker>
     </div>
 
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" ng-if='type=="individual"'>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <button type="button" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn-info" ng-click="isCollapsed = !isCollapsed">
-          <span ng-show="!isCollapsed">Show selected dates <span class="badge">{{ formData.selectedDates.length }}</span></span>
-          <span ng-hide="!isCollapsed">Hide selected dates</span>
+        <button type="button" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn-info">
+          <span>Show selected dates <span class="badge">{{ formData.selectedDates.length }}</span></span>
         </button>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" uib-collapse="!isCollapsed">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="well well-sm" style="max-height: 300px; overflow-x: hidden; overflow-y: scroll;">
           <div ng-if="formData.selectedDates.length == 0">
             No dates selected!
