front end now parses rental period and displays it in calendar

--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -68,7 +68,7 @@
             <br>
             <div class="col-md-4">
                 <uib-datepicker ng-model='activeDate' 
-                                multi-select='item.availabilityDates' 
+                                multi-select='item.rentalDates' 
                                 name="datepicker"
                                 date-disabled="disabled(date, mode)">
                 </uib-datepicker>
