fixed bug: items in rental list are now assigned rental Id instead of duplicate item ids, this way collapsing item details works as usual

--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -58,13 +58,13 @@
             </div>
             <div class="col-md-3">
                 <div class="btn-group pull-right" role="group">
-                    <button type="button" id="toggle{{item.id}}" class="btn btn-primary" data-toggle="collapse" data-target="#{{item.id}}">
+                    <button type="button" id="toggle{{item.rentalId}}" class="btn btn-primary" data-toggle="collapse" data-target="#{{item.rentalId}}">
                         Details
                     </button>
                 </div>
             </div>
         </div>
-        <div class="col-md-12 collapse myrentals-footer" id="{{item.id}}">
+        <div class="col-md-12 collapse myrentals-footer" id="{{item.rentalId}}">
             <br>
             <div class="col-md-4">
                 <uib-datepicker ng-model='activeDate' 
